--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>4.2.4.RELEASE</spring.version>
+        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
+        <validation-api.version>1.1.0.Final</validation-api.version>
         <c3p0.version>0.9.5.2</c3p0.version>
         <findbugs.version>3.0.1</findbugs.version>
         <junit.version>4.12</junit.version>
@@ -25,6 +27,7 @@
         <derby.version>10.13.1.1</derby.version>
         <hibernate-entitymanager.version>5.2.8.Final</hibernate-entitymanager.version>
         <mysql-connector-java.version>5.1.41</mysql-connector-java.version>
+        <jetty-maven-plugin.version>9.4.3.v20170317</jetty-maven-plugin.version>
     </properties>
 
     <build>
@@ -123,10 +126,34 @@
                 </reportSets>
             </plugin>
 
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>${jetty-maven-plugin.version}</version>
+            </plugin>
+
         </plugins>
     </reporting>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${javax.servlet-api.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${validation-api.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
