--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.epam.spring.core</groupId>
     <artifactId>hometask</artifactId>
+    <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>Spring Core Hometask</name>
     <description>Spring Core Hometask</description>
