--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <hibernate-entitymanager.version>5.2.8.Final</hibernate-entitymanager.version>
         <mysql-connector-java.version>5.1.41</mysql-connector-java.version>
         <jetty-maven-plugin.version>9.3.7.v20160115</jetty-maven-plugin.version>
+        <freemarker.version>2.3.23</freemarker.version>
     </properties>
 
     <build>
@@ -172,6 +173,12 @@
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
             <version>${jstl.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${freemarker.version}</version>
         </dependency>
 
         <dependency>
