--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,7 @@
 
     <!--диспетчеров может быть несколько-->
 	<servlet>
+
 		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
@@ -25,7 +26,16 @@
 			<param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
 		</init-param>
 	    <load-on-startup>1</load-on-startup>
+
+		<multipart-config>
+			<location>/tmp</location>
+			<max-file-size>20848820</max-file-size>
+			<max-request-size>418018841</max-request-size>
+			<file-size-threshold>1048576</file-size-threshold>
+		</multipart-config>
+
 	</servlet>
+
 	<servlet-mapping>
 		<servlet-name>dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
