--- a/src/main/resources/views.properties
+++ b/src/main/resources/views.properties
@@ -1,12 +1,1 @@
-bookTicketForm.(class)=org.springframework.web.servlet.view.JstlView
-bookTicketForm.url=/WEB-INF/jsp/bookTicket.jsp
-
-searchEventForm.(class)=org.springframework.web.servlet.view.JstlView
-searchEventForm.url=/WEB-INF/jsp/searchEvent.jsp
-
-home.(class)=xslt.HomePage
-home.stylesheetLocation=/WEB-INF/xsl/home.xslt
-home.root=words
-
-xl.(class)=excel.ExcelPage
-pdf.(class)=pdf.PDFPage
+pdf.(class)=ua.epam.spring.hometask.mvc.viewers.PDFPage
