added authen. and author. using UserService

--- a/src/main/resources/user.properties
+++ b/src/main/resources/user.properties
@@ -1,9 +1,12 @@
 manager.firstName=manager
 manager.password=1
-manager.roles=REGISTERED_USER,BOOKING_MANAGER
+manager.roles=ROLE_REGISTERED_USER,ROLE_BOOKING_MANAGER
 cashier.firstName=cashier
 cashier.password=1
-cashier.roles=REGISTERED_USER,BOOKING_MANAGER
+cashier.roles=ROLE_REGISTERED_USER,ROLE_BOOKING_MANAGER
 admin.firstName=admin
 admin.password=1
-admin.roles=REGISTERED_USER,BOOKING_MANAGER
+admin.roles=ROLE_REGISTERED_USER,ROLE_BOOKING_MANAGER
+reporter.firstName=reporter
+reporter.password=1
+reporter.roles=ROLE_REGISTERED_USER
