--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <jetty-maven-plugin.version>9.3.7.v20160115</jetty-maven-plugin.version>
         <freemarker.version>2.3.23</freemarker.version>
         <itex.version>2.1.7</itex.version>
-        <!-- TODO remove it -->
+        <!-- TODO replace it with json -->
         <opencsv.version>2.3</opencsv.version>
         <jackson.version>2.8.8</jackson.version>
         <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
