--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,8 @@
         <c3p0.version>0.9.5.2</c3p0.version>
         <findbugs.version>3.0.1</findbugs.version>
         <junit.version>4.12</junit.version>
-        <log4j.version>1.2.17</log4j.version>
-        <slf4j-log4j12.version>1.7.24</slf4j-log4j12.version>
-        <slf4j-api.version>1.7.24</slf4j-api.version>
+        <log4j.version>2.8.2</log4j.version>
+        <slf4j.version>1.7.25</slf4j.version>
         <aspectj.version>1.8.10</aspectj.version>
         <hibernate-core.version>5.2.8.Final</hibernate-core.version>
         <hibernate-annotations.version>3.5.6-Final</hibernate-annotations.version>
@@ -40,7 +39,6 @@
         <!-- TODO replace it with json -->
         <opencsv.version>2.3</opencsv.version>
         <jackson.version>2.8.8</jackson.version>
-        <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
     </properties>
 
     <build>
@@ -132,29 +130,10 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>${maven-checkstyle-plugin.version}</version>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>checkstyle</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
-
         </plugins>
     </reporting>
 
     <dependencies>
-
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-checkstyle-plugin</artifactId>
-            <version>${maven-checkstyle-plugin.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
@@ -270,22 +249,28 @@
             <version>${derby.version}</version>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>org.slf4j</groupId>-->
-            <!--<artifactId>slf4j-api</artifactId>-->
-            <!--<version>${slf4j-api.version}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>${slf4j-log4j12.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>${log4j.version}</version>
+            <version>${slf4j.version}</version>
         </dependency>
 
         <dependency>
