logging tuning in finished

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,27 +1,35 @@
-# Internal log Log4j disable
-log4j.debug = false
+name=PropertiesConfig
+property.filename = logs
+appenders = console, file
 
-# Level logging
-log4j.rootLogger=INFO, con
+#TODO exchange console and file appenders
 
-# Appender
-log4j.appender.con=org.apache.log4j.ConsoleAppender
+appender.console.type = Console
+appender.console.name = STDOUT
+appender.console.layout.type = PatternLayout
+appender.console.layout.pattern = %d{HH:mm:ss} %-5p %C{1}:%L - %m%n
 
-# Config pattern
-log4j.appender.con.layout=org.apache.log4j.PatternLayout
-log4j.appender.con.Target=System.out
-log4j.appender.con.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %C{1}:%L - %m%n
+appender.file.type = File
+appender.file.name = LOGFILE
+appender.file.fileName=${filename}/propertieslogs.log
+appender.file.layout.type=PatternLayout
+appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
-# Set the immediate flush to true (default)
-log4j.appender.con.ImmediateFlush=true
+#fatal error warn info debug trace
+rootLogger.level = error
+rootLogger.appenderRefs = stdout
+rootLogger.appenderRef.stdout.ref = STDOUT
 
-log4j.logger.org.springframework=ERROR
-log4j.logger.org.hibernate=ERROR
+loggers=file
+logger.file.additivity = false
+logger.file.name=ua.epam.spring.hometask.dao
+logger.file.level = debug
+logger.file.appenderRefs = file
+logger.file.appenderRef.file.ref = LOGFILE
 
-log4j.logger.com.mchange=ERROR
-
-log4j.logger.com.mchange.v2.log.MLog=com.mchange.v2.log.FallbackMLog
-log4j.logger.com.mchange.v2.log.FallbackMLog.DEFAULT_CUTOFF_LEVEL=WARNING
-
-log4j.logger.com.mchange.v2.c3p0=WARN
-log4j.logger.com.mchange.v2=WARN
+logger=spring
+logger.spring.additivity = false
+logger.spring.name=org.springframework
+logger.spring.level = debug
+logger.spring.appenderRefs = file
+logger.spring.appenderRef.file.ref = LOGFILE
