UserAccountService added & Impl & Test

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -23,6 +23,6 @@ rootLogger.appenderRef.stdout.ref = STDOUT
 loggers=file
 logger.file.additivity = false
 logger.file.name=ua.epam.spring.hometask.dao
-logger.file.level = debug
+logger.file.level = info
 logger.file.appenderRefs = file
 logger.file.appenderRef.file.ref = LOGFILE
