--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,10 @@
         <slf4j.version>1.7.25</slf4j.version>
         <aspectj.version>1.8.10</aspectj.version>
         <hibernate-core.version>5.2.8.Final</hibernate-core.version>
+        <hibernate-entitymanager.version>5.2.8.Final</hibernate-entitymanager.version>
         <hibernate-c3p0>5.2.8.Final</hibernate-c3p0>
         <h2.version>1.3.176</h2.version>
         <derby.version>10.13.1.1</derby.version>
-        <hibernate-entitymanager.version>5.2.8.Final</hibernate-entitymanager.version>
         <mysql-connector-java.version>5.1.41</mysql-connector-java.version>
         <jetty-maven-plugin.version>9.3.7.v20160115</jetty-maven-plugin.version>
         <freemarker.version>2.3.23</freemarker.version>
@@ -149,6 +149,12 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
         </dependency>
 
