--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <spring.version>4.3.7.RELEASE</spring.version>
         <spring-security.version>4.2.2.RELEASE</spring-security.version>
         <spring-ws-core.version>2.3.1.RELEASE</spring-ws-core.version>
+        <spring-boot-starter-ws.version>1.4.6.RELEASE</spring-boot-starter-ws.version>
         <wsdl4j.version>1.6.3</wsdl4j.version>
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
         <javaee-api.version>7.0</javaee-api.version>
@@ -176,6 +177,12 @@
             <groupId>org.springframework.ws</groupId>
             <artifactId>spring-ws-core</artifactId>
             <version>${spring-ws-core.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-ws</artifactId>
+            <version>${spring-boot-starter-ws.version}</version>
         </dependency>
 
         <dependency>
