country sample: package for JAXB autogenerated classes is renamed

--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
                 </executions>
                 <configuration>
                     <schemaDirectory>${project.basedir}/src/main/resources/</schemaDirectory>
-                    <outputDirectory>${project.basedir}/src/main/java/ua/epam/spring/hometask/domain/sample</outputDirectory>
+                    <outputDirectory>${project.basedir}/src/main/java</outputDirectory>
                     <clearOutputDir>false</clearOutputDir>
                 </configuration>
             </plugin>
